--- a/src/styles/scss/components/pages/experience/partials/_projects.scss
+++ b/src/styles/scss/components/pages/experience/partials/_projects.scss
@@ -1,7 +1,7 @@
 .projects {
-  border: 1px solid red;
   max-width: 90rem;
-  margin: 2rem auto;
+  margin: 10rem auto;
+  height: 70rem;
   header {
     margin-bottom: 2rem;
   }
@@ -13,24 +13,22 @@
   flex-flow: row wrap;
   justify-content: space-evenly;
   gap: 2rem;
-  height: 100%;
-  border: 1px solid red;
+  height: 90%;
+  padding-top: 2rem;
   article {
     width: 90%;
-    margin: auto;
+    margin: 2rem auto;
     max-width: 30rem;
     height: 40rem;
     max-height: 25rem;
-
-    // border: 1px solid green;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 3px 3px 10px 2px rgba($color: #000000, $alpha: 0.3);
-    border-radius: 10px 10px 0 0;
+    border-radius: 25px 25px 0 0;
 
     figure {
-      height: 80%;
+      height: 85%;
       border-radius: inherit;
       img {
         width: 100%;
@@ -40,23 +38,167 @@
       }
     }
     div {
-      border: 1px solid $accentColor;
+      border: 2px solid $accentColor;
       background-color: $shade1;
       border-top: 3px solid $accentColor;
-      height: 20%;
+      height: 15%;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       h4 {
-        align-self: flex-end;
-        padding: 0 0 2px 2px;
+        padding-left: 1rem;
+        letter-spacing: 1px;
       }
       button {
-        border: none;
-        background-color: $accentColor;
         width: 35%;
-        // letter-spacing: 1px;
-        font-weight: 600;
+        height: 100%;
+        background-color: $accentColor;
         color: $bgColor;
+        border: none;
+        border-left: 3px solid $accentColor;
+        font-weight: 600;
+        font-size: 1rem;
+        cursor: pointer;
+        &:hover {
+          background-color: transparent;
+          color: $accentColor;
+        }
+      }
+    }
+  }
+}
+
+.projects {
+  position: relative;
+
+  .modal {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    border-radius: 5px;
+    section {
+      width: 100%;
+      max-width: 50rem;
+      height: 100%;
+      box-shadow: 2px 2px 10px 5px rgba($color: #000000, $alpha: 0.5);
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  .slider-container {
+    position: relative;
+    height: 65%;
+
+    figure {
+      display: none;
+    }
+    .activeImage {
+      display: block;
+      height: 100%;
+      width: 100%;
+
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+    div {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      button {
+        background-color: rgba($color: #000000, $alpha: 0.5);
+        border: none;
+        width: 4rem;
+        height: 4rem;
+        color: $abs-white;
+        font-size: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        &:hover {
+          background-color: rgba($color: #000000, $alpha: 0.7);
+        }
+      }
+      .prev {
+        left: 0;
+        border-radius: 0 10px 0 0;
+      }
+      .next {
+        right: 0;
+        border-radius: 10px 0 0 0;
+      }
+    }
+  }
+  .modal-info {
+    border-top: 3px solid $accentColor;
+    height: 35%;
+    background-color: $bgColor;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1.5rem 1rem 1rem 1rem;
+    &-header {
+      height: 40%;
+      border-bottom: 1px solid $shade1;
+      margin-bottom: 1rem;
+      h3 {
+        letter-spacing: 1px;
+        padding-bottom: 0.5rem;
+      }
+      p {
+        opacity: 0.7;
+      }
+    }
+    &-description {
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      overflow-y: auto;
+      font-size: 1.2rem;
+    }
+    &-btn-container {
+      display: flex;
+      justify-content: space-between;
+      button {
+        background-color: transparent;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $abs-black;
+        opacity: 0.4;
+        font-size: 1.5rem;
+        cursor: pointer;
+      }
+    }
+    &-urls {
+      width: 70%;
+      max-width: 20rem;
+      display: flex;
+      justify-content: space-between;
+      a {
+        display: flex;
+        align-items: center;
+        width: 45%;
+        max-width: 8rem;
+        svg {
+          margin-right: 3px;
+        }
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
   }
@@ -65,5 +207,11 @@
 @media (min-width: 768px) {
   .projects-container {
     max-width: 70rem;
+  }
+}
+
+@media (min-width: 1174px) {
+  .projects {
+    height: 50rem;
   }
 }
