--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -148,30 +148,20 @@ li {
 }
 
 #selfie-container {
-  width: 90%;
-  margin: 0 auto;
-  height: 70%;
+  width: 70%;
+  margin: auto;
+  height: 60%;
   background: linear-gradient(to right, rgba(255, 50, 50, 0) 0%, rgba(255, 50, 50, 0) 70%, var(--accentColor) 90%, rgba(255, 48, 48, 0) 100%);
-  -webkit-text-fill-color: transparent;
-  border-radius: 50% 50% 10px 10px;
-  overflow: hidden;
-  cursor: default;
+  box-shadow: -7px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
 }
 
-#selfie {
-  border-radius: 50% 50% 10px 10px;
-  background: url("../../assets/images/me-headshot.png") no-repeat center;
+#selfie-container img {
+  border-radius: 50%;
+  border-left: 6px outset var(--accentColor);
   width: 100%;
-  word-spacing: 0px;
-  -webkit-background-clip: text;
-  background-clip: text;
   height: 100%;
-  font-size: 10px;
-  line-height: 0.4;
-  font-weight: 900;
-  letter-spacing: -1px;
-  background-size: cover;
-  border: 2px solid var(--accentColor);
+  object-fit: cover;
 }
 
 .navbar {
