--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -404,7 +404,16 @@ li {
 }
 
 .about-info-body {
-  display: none;
+  position: absolute;
+  bottom: -2rem;
+  font-size: 1rem;
+  text-align: left;
+  padding-left: 1.1rem;
+  max-width: 85%;
+}
+
+.about-info-body p:first-of-type {
+  margin-bottom: 0.5rem;
 }
 
 .about-info-body strong {
@@ -414,28 +423,59 @@ li {
 .about-info-btns {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 80%;
   max-width: 30rem;
   margin: auto;
 }
 
-.about-info-btns a {
+#projects-btn {
   border: 2px solid var(--accentColor);
   padding: 0.7rem 2.5rem;
-  border-radius: 20px;
+  border-radius: 2rem;
   color: #fff;
   background-color: #0c2745;
 }
 
-.about-info-btns a:first-of-type {
-  display: flex;
-  align-items: center;
-  padding: 0.7rem 2rem;
+#projects-btn:hover {
+  background-color: #144070;
 }
 
-.about-info-btns a:first-of-type svg {
-  position: relative;
-  top: 2px;
+#resume-btns-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid var(--accentColor);
+  border-radius: 2rem;
+  color: #fff;
+  background-color: #0c2745;
+  width: 10rem;
+}
+
+#resume-btns-container div {
+  text-align: center;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding-top: 0.2rem;
+}
+
+#resume-btns-container div a {
+  width: 49%;
+  padding: 0.2rem 0;
+  background-color: #144070;
+}
+
+#resume-btns-container div a:hover {
+  background-color: var(--accentColor);
+}
+
+#resume-btns-container div a:first-of-type {
+  border-radius: 0 0 0 1.75rem;
+}
+
+#resume-btns-container div a:last-child {
+  border-radius: 0 0 1.75rem 0;
 }
 
 @media (min-width: 768px) {
@@ -456,14 +496,24 @@ li {
     margin: 0;
   }
   .about-info-body {
+    position: static;
     display: block;
-    padding-bottom: 3rem;
+    padding: 0 0 3rem 0;
     font-size: 1.4rem;
   }
   .about-info-btns {
     width: 100%;
     justify-content: space-around;
     margin: 0;
+  }
+}
+
+@media (min-width: 2500px) {
+  #resume-btns-container div a:first-of-type {
+    border-radius: 0 0 0 1.85rem;
+  }
+  #resume-btns-container div a:last-child {
+    border-radius: 0 0 1.85rem 0;
   }
 }
 
