--- a/src/styles/scss/components/pages/about/_about.scss
+++ b/src/styles/scss/components/pages/about/_about.scss
@@ -67,7 +67,16 @@
       }
     }
     &-body {
-      display: none;
+      // display: none;
+      position: absolute;
+      bottom: -2rem;
+      font-size: 1rem;
+      text-align: left;
+      padding-left: 1.1rem;
+      max-width: 85%;
+      p:first-of-type {
+        margin-bottom: 0.5rem;
+      }
       strong {
         color: $accentColor;
       }
@@ -75,65 +84,63 @@
     &-btns {
       display: flex;
       justify-content: space-evenly;
+      align-items: center;
       width: 80%;
       max-width: 30rem;
       margin: auto;
-      a {
-        border: 2px solid $accentColor;
-        padding: 0.7rem 2.5rem;
-        border-radius: 20px;
-        color: $abs-white;
-        background-color: darken($color: #408bdd, $amount: 40%);
-      }
-      a:first-of-type {
-        display: flex;
-        align-items: center;
-        padding: 0.7rem 2rem;
-        svg {
-          position: relative;
-          top: 2px;
-        }
-      }
     }
   }
-  // &-socials-container {
-  //   z-index: 2;
-  //   position: absolute;
-  //   bottom: 4rem;
-  //   right: 0;
-  //   left: 0;
-  //   margin: auto;
-  //   article {
-  //     display: flex;
-  //     justify-content: center;
-  //     width: 100%;
-  //     ul {
-  //       width: 70%;
-  //       max-width: 300px;
-  //       display: flex;
-  //       justify-content: space-evenly;
-  //       li {
-  //         font-size: 2.5rem;
-  //         color: $accentColor;
-  //       }
-  //     }
-  //   }
+}
 
-  //   &-self-shot {
-  //     display: none;
-  //   }
-  // }
+#projects-btn {
+  border: 2px solid $accentColor;
+  padding: 0.7rem 2.5rem;
+  border-radius: 2rem;
+  color: $abs-white;
+  background-color: darken($color: #408bdd, $amount: 40%);
+  &:hover {
+    background-color: darken($color: #408bdd, $amount: 30%);
+  }
+}
+#resume-btns-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid $accentColor;
+  border-radius: 2rem;
+  color: $abs-white;
+  background-color: darken($color: #408bdd, $amount: 40%);
+  width: 10rem;
+
+  div {
+    text-align: center;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-top: 0.2rem;
+    a {
+      width: 49%;
+      padding: 0.2rem 0;
+      background-color: darken($color: #408bdd, $amount: 30%);
+      &:hover {
+        background-color: $accentColor;
+      }
+    }
+    a:first-of-type {
+      border-radius: 0 0 0 1.75rem;
+    }
+    a:last-child {
+      border-radius: 0 0 1.75rem 0;
+    }
+  }
 }
 
 @media (min-width: 768px) {
   .about {
-    // border: 1px solid red;
     flex-direction: row;
     justify-content: space-between;
     &-info {
-      // border: 1px solid red;
       width: 90%;
-      // margin: 2rem 0 0 2rem;
       text-align: left;
       height: 55rem;
 
@@ -145,8 +152,9 @@
         margin: 0;
       }
       &-body {
+        position: static;
         display: block;
-        padding-bottom: 3rem;
+        padding: 0 0 3rem 0;
         font-size: 1.4rem;
       }
       &-btns {
@@ -155,21 +163,16 @@
         margin: 0;
       }
     }
-    // &-socials-container {
-    //   right: 3rem;
-    //   left: auto;
-    //   top: 0;
-    //   bottom: 15rem;
-    //   width: 10%;
-    //   height: fit-content;
-    //   ul {
-    //     flex-direction: column;
-    //   }
-
-    //   &-self-shot {
-    //     display: block;
-    //   }
-    // }
+  }
+}
+@media (min-width: 2500px) {
+  #resume-btns-container div {
+    a:first-of-type {
+      border-radius: 0 0 0 1.85rem;
+    }
+    a:last-child {
+      border-radius: 0 0 1.85rem 0;
+    }
   }
 }
 
