--- a/src/styles/scss/components/pages/experience/partials/_projects.scss
+++ b/src/styles/scss/components/pages/experience/partials/_projects.scss
@@ -70,17 +70,31 @@
 
 .projects {
   position: relative;
-
+  //When Modal is open
+  margin: auto;
+  &-modal::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: $oppositeColor;
+    opacity: 0.4;
+    margin: auto;
+    right: 0;
+    left: 0;
+    border-radius: 1rem;
+  }
+  //Modal container
   .modal {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgba($color: #000000, $alpha: 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 1rem;
     border-radius: 5px;
+
     section {
       width: 100%;
       max-width: 50rem;
@@ -90,115 +104,120 @@
       flex-direction: column;
     }
   }
+}
 
-  .slider-container {
-    position: relative;
-    height: 65%;
+//Modal images
+.modal .slider-container {
+  position: relative;
+  height: 65%;
 
-    figure {
-      display: none;
-    }
-    .activeImage {
-      display: block;
+  figure {
+    display: none;
+  }
+  .activeImage {
+    display: block;
+    height: 100%;
+    width: 100%;
+
+    img {
       height: 100%;
       width: 100%;
-
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-      }
-    }
-    div {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      button {
-        background-color: rgba($color: #000000, $alpha: 0.5);
-        border: none;
-        width: 4rem;
-        height: 4rem;
-        color: $abs-white;
-        font-size: 2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        &:hover {
-          background-color: rgba($color: #000000, $alpha: 0.7);
-        }
-      }
-      .prev {
-        left: 0;
-        border-radius: 0 10px 0 0;
-      }
-      .next {
-        right: 0;
-        border-radius: 10px 0 0 0;
-      }
+      object-fit: cover;
     }
   }
-  .modal-info {
-    border-top: 3px solid $accentColor;
-    height: 35%;
-    background-color: $bgColor;
+  div {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    button {
+      background-color: rgba($color: #000000, $alpha: 0.5);
+      border: none;
+      width: 4rem;
+      height: 4rem;
+      color: $abs-white;
+      font-size: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      &:hover {
+        background-color: rgba($color: #000000, $alpha: 0.7);
+      }
+    }
+    .prev {
+      left: 0;
+      border-radius: 0 10px 0 0;
+    }
+    .next {
+      right: 0;
+      border-radius: 10px 0 0 0;
+    }
+  }
+}
+//Modal information
+.modal .modal-info {
+  border-top: 3px solid $accentColor;
+  height: 35%;
+  background-color: $bgColor;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1.5rem 1rem 1rem 1rem;
+  &-header {
+    height: 40%;
+    border-bottom: 1px solid $shade1;
+    margin-bottom: 1rem;
+    h3 {
+      letter-spacing: 1px;
+      padding-bottom: 0.5rem;
+    }
+    p {
+      opacity: 0.7;
+      font-size: 1.2rem;
+    }
+  }
+  &-description {
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1.5rem 1rem 1rem 1rem;
-    &-header {
-      height: 40%;
-      border-bottom: 1px solid $shade1;
-      margin-bottom: 1rem;
-      h3 {
-        letter-spacing: 1px;
-        padding-bottom: 0.5rem;
+    overflow-y: auto;
+    font-size: 1.2rem;
+  }
+  &-btn-container {
+    display: flex;
+    justify-content: space-between;
+    //X Button
+    button {
+      background-color: transparent;
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $oppositeColor;
+      opacity: 0.4;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+  }
+  //Site/github
+  &-urls {
+    width: 70%;
+    max-width: 20rem;
+    display: flex;
+    justify-content: space-between;
+    a {
+      display: flex;
+      align-items: center;
+      width: 45%;
+      max-width: 8rem;
+      svg {
+        margin-right: 3px;
       }
-      p {
+      &:hover {
         opacity: 0.7;
-      }
-    }
-    &-description {
-      height: 60%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      overflow-y: auto;
-      font-size: 1.2rem;
-    }
-    &-btn-container {
-      display: flex;
-      justify-content: space-between;
-      button {
-        background-color: transparent;
-        border: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: $abs-black;
-        opacity: 0.4;
-        font-size: 1.5rem;
-        cursor: pointer;
-      }
-    }
-    &-urls {
-      width: 70%;
-      max-width: 20rem;
-      display: flex;
-      justify-content: space-between;
-      a {
-        display: flex;
-        align-items: center;
-        width: 45%;
-        max-width: 8rem;
-        svg {
-          margin-right: 3px;
-        }
-        &:hover {
-          opacity: 0.7;
-        }
       }
     }
   }
