--- a/src/styles/scss/components/_global.scss
+++ b/src/styles/scss/components/_global.scss
@@ -38,5 +38,5 @@
   }
 }
 @import "./navigation/navbar";
-@import "./pages/about/about", "./pages/experience/experience",
+@import "./pages/about/about", "./partials/skills/skills", "./partials/projects/projects",
   "./pages/contact/contact";
