--- a/src/styles/scss/components/_global.scss
+++ b/src/styles/scss/components/_global.scss
@@ -38,5 +38,5 @@
   }
 }
 @import "./navigation/navbar";
-@import "./pages/about/about", "./partials/skills/skills", "./partials/projects/projects",
-  "./pages/contact/contact";
+@import "./pages/about/about", "./pages/skills/skills",
+  "./pages/projects/projects", "./pages/contact/contact";
