--- a/src/styles/scss/components/pages/about/_about.scss
+++ b/src/styles/scss/components/pages/about/_about.scss
@@ -20,7 +20,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    height: 80%;
+    height: 70%;
     margin: auto;
     position: relative;
     justify-content: space-between;
@@ -29,9 +29,8 @@
     &-title {
       display: flex;
       flex-direction: column;
-      height: 60%;
-
-      justify-content: space-evenly;
+      height: 40%;
+      justify-content: space-between;
       h1 {
         font-size: 4rem;
         letter-spacing: 2px;
