--- a/src/styles/scss/components/pages/contact/_contact.scss
+++ b/src/styles/scss/components/pages/contact/_contact.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: auto;
+  margin: 2rem auto;
   background: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0) 80%,
