--- a/src/styles/scss/components/pages/projects/_projects.scss
+++ b/src/styles/scss/components/pages/projects/_projects.scss
@@ -44,9 +44,11 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      h4 {
+      p {
         padding-left: 1rem;
         letter-spacing: 1px;
+        font-weight: 600;
+        font-size: 1.6rem;
       }
       button {
         width: 35%;
