--- a/src/styles/scss/components/pages/skills/_skills.scss
+++ b/src/styles/scss/components/pages/skills/_skills.scss
@@ -37,8 +37,8 @@
       height: 6rem;
       img {
         object-fit: contain;
-        height: 80%;
-        width: 100%;
+        height: 4rem;
+        width: 5rem;
       }
       p {
         height: 20%;
