--- a/src/styles/scss/components/pages/skills/_skills.scss
+++ b/src/styles/scss/components/pages/skills/_skills.scss
@@ -121,6 +121,9 @@
       left: -10px;
     }
   }
+  li:last-child {
+    list-style-type: none;
+  }
   p {
     border-top: 1px solid $shade2;
     text-align: center;
