--- a/src/styles/scss/components/navigation/_navbar.scss
+++ b/src/styles/scss/components/navigation/_navbar.scss
@@ -125,6 +125,7 @@
         align-items: center;
         span {
           font-size: 0.8rem;
+          font-weight: 600;
         }
       }
     }
