--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -328,7 +328,7 @@ li {
   flex-direction: column;
   height: 100vh;
   width: 100%;
-  background: url("../../assets/images/hero-bg2.jpg") no-repeat center;
+  background: url("../../assets/images/hero-bg/hero-bg-sm.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -479,6 +479,7 @@ li {
   .about {
     flex-direction: row;
     justify-content: space-between;
+    background-image: url("../../assets/images/hero-bg/hero-bg-sm-med.jpg");
   }
   .about-info {
     width: 90%;
@@ -502,6 +503,24 @@ li {
     width: 100%;
     justify-content: space-around;
     margin: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .about {
+    background-image: url("../../assets/images/hero-bg/hero-bg-med.jpg");
+  }
+}
+
+@media (min-width: 1500px) {
+  .about {
+    background-image: url("../../assets/images/hero-bg/hero-bg-med-lg.jpg");
+  }
+}
+
+@media (min-width: 1800px) {
+  .about {
+    background-image: url("../../assets/images/hero-bg/hero-bg-lg.jpg");
   }
 }
 
