--- a/src/styles/scss/components/navigation/_navbar.scss
+++ b/src/styles/scss/components/navigation/_navbar.scss
@@ -125,7 +125,7 @@
         align-items: center;
         span {
           font-size: 0.9rem;
-          font-weight: 600;
+          text-transform: uppercase;
         }
       }
     }
