--- a/src/styles/scss/components/pages/projects/_projects.scss
+++ b/src/styles/scss/components/pages/projects/_projects.scss
@@ -123,7 +123,8 @@
     img {
       height: 100%;
       width: 100%;
-      object-fit: cover;
+      object-fit: contain;
+      background-color: $bgColor;
     }
   }
   div {
