--- a/src/styles/scss/components/navigation/_navbar.scss
+++ b/src/styles/scss/components/navigation/_navbar.scss
@@ -126,6 +126,8 @@
         span {
           font-size: 0.9rem;
           text-transform: uppercase;
+          font-weight: 900;
+          color: $accentColor-highContrast;
         }
       }
     }
