--- a/src/styles/scss/utils/_config.scss
+++ b/src/styles/scss/utils/_config.scss
@@ -12,6 +12,7 @@ $abs-black: #000;
 $dark-bgColor: #121212;
 $dark-textColor: #eee;
 $dark-accentColor: #fd7014;
+$dark-accentColor-highContrast: #fd7014;
 $dark-shade1: #222832;
 $dark-shade2: #393e46;
 $dark-shade3: #484d55;
@@ -20,6 +21,7 @@ $dark-opposite-color: #fff;
 $light-bgColor: #fafafa;
 $light-textColor: #484b6a;
 $light-accentColor: #408bdd;
+$light-accentColor-highContrast: #0f4783;
 $light-shade1: #e4e5f1;
 $light-shade2: #d2d3db;
 $light-shade3: #9394a5;
@@ -31,12 +33,14 @@ $shade2: var(--shade2);
 $shade3: var(--shade3);
 $textColor: var(--textColor);
 $accentColor: var(--accentColor);
+$accentColor-highContrast: var(--accentColor-highContrast);
 $oppositeColor: var(--opposite);
 
 body.dark {
   --bgColor: #{$dark-bgColor};
   --textColor: #{$dark-textColor};
   --accentColor: #{$dark-accentColor};
+  --accentColor-highContrast: #{$dark-accentColor-highContrast};
   --shade1: #{$dark-shade1};
   --shade2: #{$dark-shade2};
   --shade3: #{$dark-shade3};
@@ -46,6 +50,7 @@ body.light {
   --bgColor: #{$light-bgColor};
   --textColor: #{$light-textColor};
   --accentColor: #{$light-accentColor};
+  --accentColor-highContrast: #{$light-accentColor-highContrast};
   --shade1: #{$light-shade1};
   --shade2: #{$light-shade2};
   --shade3: #{$light-shade3};
