--- a/src/styles/scss/components/navigation/_navbar.scss
+++ b/src/styles/scss/components/navigation/_navbar.scss
@@ -138,7 +138,7 @@
   }
 }
 
-@import "./partials/menuBtn";
+@import "./partials/menuBtn", "./partials/scrollTop";
 
 @media (min-width: 768px) {
   .container {
