Add margin top&bot to skills section

--- a/src/styles/scss/components/pages/skills/_skills.scss
+++ b/src/styles/scss/components/pages/skills/_skills.scss
@@ -1,6 +1,6 @@
 .skills-container {
   width: 100%;
-  margin: 4rem auto;
+  margin: 6rem auto 10rem auto;
   height: 45rem;
   display: flex;
   flex-direction: column;
