Increase contact height, and spacing between contact-info

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1091,7 +1091,7 @@ li {
 }
 
 .contact {
-  height: 40rem;
+  height: 50rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -1110,10 +1110,12 @@ li {
 .contact main {
   max-width: 80rem;
   margin: auto;
-  height: 80%;
+  height: 70%;
   text-align: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .contact main article {
