--- a/src/styles/scss/components/pages/contact/_contact.scss
+++ b/src/styles/scss/components/pages/contact/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  height: 40rem;
+  height: 50rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -19,11 +19,13 @@
   main {
     max-width: 80rem;
     margin: auto;
-    height: 80%;
+    height: 70%;
     text-align: center;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     article {
       margin-bottom: 4rem;
 
