--- a/src/styles/scss/components/pages/about/_about.scss
+++ b/src/styles/scss/components/pages/about/_about.scss
@@ -66,9 +66,8 @@
       }
     }
     &-body {
-      // display: none;
       position: absolute;
-      bottom: -2rem;
+      bottom: -15%;
       font-size: 1rem;
       text-align: left;
       padding-left: 1.1rem;
