--- a/src/styles/scss/components/navigation/_navbar.scss
+++ b/src/styles/scss/components/navigation/_navbar.scss
@@ -11,6 +11,9 @@
   );
   box-shadow: -7px 5px 10px 2px rgba($color: #000000, $alpha: 0.5);
   border-radius: 50%;
+  -webkit-animation: rotate-in-ver 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
+  animation: rotate-in-ver 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   img {
     border-radius: 50%;
     border-left: 6px outset $accentColor;
@@ -34,7 +37,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem 0 1rem 0.5rem;
-  z-index: 8;
+  z-index: 10;
 
   &-header {
     height: 30%;
@@ -103,6 +106,11 @@
     }
   }
   &-socials {
+    -webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      both;
+    animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    animation-delay: 1s;
+    animation-duration: 500ms;
     color: $accentColor;
     height: 10%;
     display: flex;
