--- a/src/styles/scss/components/pages/projects/_projects.scss
+++ b/src/styles/scss/components/pages/projects/_projects.scss
@@ -84,7 +84,9 @@
     margin: auto;
     right: 0;
     left: 0;
+
     border-radius: 1rem;
+    z-index: 5;
   }
   //Modal container
   .modal {
@@ -96,6 +98,7 @@
     justify-content: center;
     padding: 1rem;
     border-radius: 5px;
+    z-index: 5;
 
     section {
       width: 100%;
