--- a/src/styles/scss/components/pages/projects/_projects.scss
+++ b/src/styles/scss/components/pages/projects/_projects.scss
@@ -14,6 +14,7 @@
   justify-content: space-evenly;
   gap: 2rem;
   height: 90%;
+  padding-top: 3rem;
   article {
     width: 90%;
     margin: 2rem auto;
