--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -8,9 +8,7 @@ Main CSS (General tags)
   margin: 0;
   padding: 0;
 }
-html {
-  font-size: 10px;
-}
+
 //Containers
 html,
 body,
@@ -22,8 +20,8 @@ body,
   scroll-behavior: smooth;
 }
 body {
-  background-color: $bgColor;
-  color: $textColor;
+  // background-color: $bgColor;
+  // color: $textColor;
   transition: all 0.3s linear;
   font-family: $ff-secondary;
   font-size: 1.4rem;
@@ -69,9 +67,11 @@ li {
   list-style-type: none;
 }
 
-.accent-color {
-  color: $accentColor;
+img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
-
-@import "./utils/mediaQueries";
-@import "./utils/animations";
+// .accent-color {
+//   color: $accentColor;
+// }
