--- a/src/styles/scss/utils/_config.scss
+++ b/src/styles/scss/utils/_config.scss
@@ -2,6 +2,6 @@
 Config
 **********************/
 /* Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro&display=swap");
-$ff-primary: "Playfair Display", serif;
-$ff-secondary: "Source Sans Pro", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Waterfall&display=swap");
+$ff-primary: sans-serif;
+$ff-signature: "Waterfall", cursive;
