--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -10,46 +10,29 @@ Main CSS (General tags)
 }
 
 //Containers
-html,
-body,
-#root,
-.app {
+body {
   width: 100%;
   height: 100%;
   overflow: auto;
   scroll-behavior: smooth;
-}
-body {
-  // background-color: $bgColor;
-  // color: $textColor;
-  // transition: all 0.3s linear;
-  font-family: $ff-secondary;
-  font-size: 1.4rem;
-}
-
-//Tags
-h1,
-h2,
-h3,
-h4,
-h5 {
   font-family: $ff-primary;
 }
-h1 {
-  font-size: 2.4rem;
-}
-h2 {
-  font-size: 2.2rem;
-}
-h3 {
-  font-size: 2rem;
-}
-h4 {
-  font-size: 1.8rem;
-}
-h5 {
-  font-size: 1.6rem;
-}
+
+// h1 {
+//   font-size: 2.4rem;
+// }
+// h2 {
+//   font-size: 2.2rem;
+// }
+// h3 {
+//   font-size: 2rem;
+// }
+// h4 {
+//   font-size: 1.8rem;
+// }
+// h5 {
+//   font-size: 1.6rem;
+// }
 
 //Remove default <a> styles
 a {
@@ -66,7 +49,181 @@ li {
 }
 
 img {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
+}
+
+.about {
+  position: relative;
+  width: 100%;
+  padding: 6rem 0;
+}
+#hero-bg {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(55deg, #11cdef, #1171ef);
+  background: linear-gradient(35deg, #11cdef, #1171ef);
+
+  span {
+    position: absolute;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    &:nth-child(1) {
+      background-color: rgba($color: #fff, $alpha: 0.1);
+      left: -4%;
+      bottom: auto;
+    }
+    &:nth-child(2) {
+      background-color: rgba($color: #fff, $alpha: 0.1);
+      right: 4%;
+      top: 10%;
+    }
+    &:nth-child(3) {
+      background-color: rgba($color: #fff, $alpha: 0.3);
+      top: 280px;
+      right: 5.6%;
+    }
+    &:nth-child(4) {
+      background-color: rgba($color: #fff, $alpha: 0.15);
+      top: 320px;
+      right: 7%;
+    }
+    &:nth-child(5) {
+      background-color: rgba($color: #fff, $alpha: 0.05);
+      top: 38%;
+      left: 1%;
+      right: auto;
+    }
+    &:nth-child(6) {
+      background-color: rgba($color: #fff, $alpha: 0.15);
+      width: 200px;
+      height: 200px;
+      top: 44%;
+      left: 10%;
+      right: auto;
+    }
+    &:nth-child(7) {
+      background-color: rgba($color: #fff, $alpha: 0.04);
+      bottom: 50%;
+      right: 36%;
+    }
+    &:nth-child(8) {
+      background-color: rgba($color: #fff, $alpha: 0.2);
+      bottom: 70px;
+      right: 2%;
+    }
+    &:nth-child(9) {
+      background-color: rgba($color: #fff, $alpha: 0.1);
+      bottom: 1%;
+      right: 2%;
+    }
+  }
+}
+
+.container-max-width {
+  width: 80vw;
+  max-width: 65rem;
+  margin: 0 auto;
+}
+
+.navbar-dropdown {
+  width: 96vw;
+  position: absolute;
+  top: 0rem;
+  right: 0;
+  left: 0;
+  margin: 0.7rem;
+  overflow-y: auto;
+  height: auto;
+  opacity: 0;
+}
+.navbar-dropdown-open {
+  padding: 1.5rem;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 50px 100px rgba($color: #32325d, $alpha: 0.1),
+    0 15px 35px rgba($color: #32325d, $alpha: 0.15),
+    0 5px 15px rgba($color: #000000, $alpha: 0.1);
+  animation: show-navbar-collapse 0.2s ease forwards;
+  z-index: 9;
+}
+
+.navbar {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  transition: all 0.3s linear;
+  height: 4.5rem;
+  color: #fff;
+
+  div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h3 {
+      font-family: $ff-signature;
+      font-weight: 100;
+      font-size: 3rem;
+    }
+  }
+}
+.navbar-fixed {
+  position: fixed;
+  width: 100%;
+  background-color: #172b4d;
+}
+
+.navbar .socials {
+  display: none;
+}
+#open-menu-btn {
+  z-index: 5;
+}
+#close-menu-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+@media (min-width: 992px) {
+  /* Navbar responsive */
+  #open-menu-btn {
+    display: none;
+  }
+  .navbar-dropdown-open {
+    display: none;
+  }
+  .navbar .socials {
+    display: flex;
+  }
+}
+
+@keyframes show-navbar-collapse {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+    transform-origin: 100% 0;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes hide-navbar-collapse {
+  from {
+    opacity: 1;
+    transform: scale(1);
+    transform-origin: 100% 0;
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.95);
+  }
 }
