--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -13,7 +13,6 @@ Main CSS (General tags)
 body {
   width: 100%;
   height: 100%;
-  overflow: auto;
   scroll-behavior: smooth;
   font-family: $ff-primary;
 }
@@ -58,6 +57,26 @@ img {
   position: relative;
   width: 100%;
   padding: 6rem 0;
+
+  &-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    article {
+      height: 50%;
+    }
+
+    figure {
+      width: 80%;
+      height: 50%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+  }
 }
 #hero-bg {
   position: absolute;
@@ -130,7 +149,6 @@ img {
   max-width: 65rem;
   margin: 0 auto;
 }
-
 .navbar-dropdown {
   width: 96vw;
   position: absolute;
@@ -143,6 +161,7 @@ img {
   opacity: 0;
 }
 .navbar-dropdown-open {
+  position: fixed;
   padding: 1.5rem;
   border-radius: 5px;
   background-color: #fff;
@@ -178,6 +197,7 @@ img {
   position: fixed;
   width: 100%;
   background-color: #172b4d;
+  z-index: 7;
 }
 
 .navbar .socials {
@@ -190,6 +210,14 @@ img {
   position: absolute;
   top: 1rem;
   right: 1rem;
+}
+#scrollTop {
+  background-color: red;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100px;
+  height: 100px;
 }
 @media (min-width: 992px) {
   /* Navbar responsive */
